--- a/index.html
+++ b/index.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IA Foysal</title>
+    <link rel="stylesheet" href="style/style.css">
+
 </head>
 <body>
+    <header>
+        <div>
+            <h3>LOGO</h3>
+            <button>Sign Up</button>
+        </div>
+        <div>
+            <p>Cool Dark UI Template for Webflow Agencies!
+Stay Focused</p>
+        </div>
+    </header>
     
 </body>
 </html>
