background img add

--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
 
 </head>
 <body>
-    <header>
-        <div>
-            <h3>LOGO</h3>
-            <button>Sign Up</button>
+    <header class="header">
+        <div class="uper-head">
+            <h3 class="text-color" style="font-size: 2rem;"><b>LOGO</b></h3>
+            <button class="btn-color">Sign Up</button>
         </div>
-        <div>
-            <p>Cool Dark UI Template for Webflow Agencies!
+        <div class="down-head">
+            <p class="text-color">Cool Dark UI Template for Webflow Agencies!
 Stay Focused</p>
+<button class="btn-color">Stay Focused</button>
         </div>
     </header>
     
