--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </section>
         <section class="log-in">
             <div class="cption">
-                <p style="font-size: 5.6rem;"><b>Let's Get in <br> Touch</b></p>
+                <p style="font-size: 5.6rem;margin-top: 100px;"><b>Let's Get in <br> Touch</b></p>
             </div>
             <div class="input">
                 <div class="input-a">
@@ -81,6 +81,17 @@
         
 
     </main>
+    <footer>
+        <h1 class="text-color" style="font-size: 5rem;padding-top: 100px;"><b>LOGO</b></h1>
+        <p style="color: rgb(187, 168, 168);font-size: small;">Ready to elevate your online persence? Contact us today to discuss <br>your project and discover how we can bring your vision to life.</p>
+        <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">How it Works</a></li>
+            <li><a href="">Services</a></li>
+
+        </ul>
+    </footer>
     
 </body>
 </html>
